third_party/lw_abi/lw_c_api.h

LW_C_API void lw_release(void* handle);
/* ---- Callback string payloads ----------------------------------------- */

/* Frees a payload delivered to a callback below. Every `char*` a callback
 * receives is owned by the callback, which passes it here once done. NULL is
 * ignored.
 *
 * Data channel messages come this way too. They are length-delimited, since a
 * binary message may contain zero bytes, but a NUL is appended past the length
 * so a text message can also be read as a C string. */
LW_C_API void lw_string_free(char* s);
/* ---- Peer connection / transceiver / receiver ------------------------- */

/* Opaque handles produced by the calls below. */
typedef struct lw_pc lw_pc_t;
typedef struct lw_transceiver lw_transceiver_t;
/* ---- Data channel ----------------------------------------------------- */

typedef struct lw_data_channel lw_data_channel_t;
typedef enum lw_data_channel_state {
  LW_DATA_CHANNEL_CONNECTING = 0,
  LW_DATA_CHANNEL_OPEN = 1,
  LW_DATA_CHANNEL_CLOSING = 2,
  LW_DATA_CHANNEL_CLOSED = 3,
} lw_data_channel_state;
/* Sends one message. `binary` distinguishes a binary message from text, which
 * the far side is told. Returns 0 on success, negative on error.
 *
 * Success means the message was accepted for sending, not that it arrived.
 * Sending faster than the transport drains grows the buffered amount without
 * bound, so a caller that can outrun the link should watch
 * lw_data_channel_buffered_amount. */
LW_C_API int lw_data_channel_send(lw_data_channel_t* channel,
                                  const uint8_t* data, uint32_t size,
                                  int binary);
/* Closes the channel. The handle stays valid until lw_release. */
LW_C_API void lw_data_channel_close(lw_data_channel_t* channel);
/* The channel's id, or negative before one is assigned or on error. */
LW_C_API int lw_data_channel_id(lw_data_channel_t* channel);
/* The channel's state as lw_data_channel_state, negative on error. */
LW_C_API int lw_data_channel_get_state(lw_data_channel_t* channel);
/* Bytes accepted for sending but not yet handed to the transport. */
LW_C_API uint64_t lw_data_channel_buffered_amount(lw_data_channel_t* channel);
/* The channel's label, owned by the caller (lw_string_free). NULL on error. */
LW_C_API char* lw_data_channel_label(lw_data_channel_t* channel);
/* Channel events, invoked on the signaling thread. Any field may be NULL. The
 * struct is copied on registration; the function pointers and `user` must
 * remain valid until the observer is removed. */
typedef struct LwDataChannelObserver {
  uint32_t size; /* sizeof(LwDataChannelObserver) */
  void (*on_state)(int state, void* user);
  /* One message. `data` is owned by the callback (lw_string_free) and is
   * `size` bytes, with a NUL appended past them. */
  void (*on_message)(char* data, uint32_t size, int binary, void* user);
} LwDataChannelObserver;
/* Registers `observer` for `channel`, replacing any previous one. Returns 0 on
 * success, negative on error. Remove it before releasing the channel. */
LW_C_API int lw_data_channel_set_observer(lw_data_channel_t* channel,
                                          const LwDataChannelObserver* observer,
                                          void* user);
/* Removes and destroys the channel's observer, if any. */
LW_C_API void lw_data_channel_remove_observer(lw_data_channel_t* channel);
/* Per-event C callbacks, invoked on the signaling thread. Any field may be
 * NULL. State ints take the values of the enums above. The
 * struct is copied on registration, so it need not outlive the call; the
 * function pointers and `user` must remain valid until the observer is
 * removed. */
typedef struct LwPcObserver {
  uint32_t size; /* sizeof(LwPcObserver) */
  void (*on_signaling_state)(int state, void* user);
  void (*on_connection_state)(int state, void* user);
  void (*on_ice_gathering_state)(int state, void* user);
  void (*on_ice_connection_state)(int state, void* user);
  /* A local ICE candidate was gathered. The strings are owned by the callback
   * (lw_string_free), as for the SDP callbacks above. */
  void (*on_ice_candidate)(char* candidate, char* sdp_mid, int sdp_mline_index,
                           void* user);
  void (*on_renegotiation_needed)(void* user);
  /* A remote track arrived. `transceiver` is an OWNING handle: retire it with
   * lw_release; reach its receiver/video track via the transceiver
   * accessors. */
  void (*on_track)(lw_transceiver_t* transceiver, void* user);
  /* The far side opened a data channel. `channel` is an OWNING handle: retire
   * it with lw_release. Register an observer on it to receive messages. */
  void (*on_data_channel)(lw_data_channel_t* channel, void* user);
} LwPcObserver;
/* Registers `observer` for `pc`, replacing any previous one. Returns 0 on
 * success, negative on error. Remove it (or before releasing the pc) with
 * lw_pc_remove_observer. */
LW_C_API int lw_pc_set_observer(lw_pc_t* pc, const LwPcObserver* observer,
                                void* user);
/* Removes and destroys the pc's observer, if any. */
LW_C_API void lw_pc_remove_observer(lw_pc_t* pc);