lib/src/ffi/lw_bindings.dart


  /// Sends one message. `binary` distinguishes a binary message from text, which
  /// the far side is told. Returns 0 on success, negative on error.
  ///
  /// Success means the message was accepted for sending, not that it arrived.
  /// Sending faster than the transport drains grows the buffered amount without
  /// bound, so a caller that can outrun the link should watch
  /// lw_data_channel_buffered_amount.
  int lw_data_channel_send(
    ffi.Pointer<lw_data_channel_t> channel,
    ffi.Pointer<ffi.Uint8> data,
    int size,
    int binary,
  ) {
    return _lw_data_channel_send(
      channel,
      data,
      size,
      binary,
    );
  }

  late final _lw_data_channel_sendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<lw_data_channel_t>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint32,
              ffi.Int)>>('lw_data_channel_send');
  late final _lw_data_channel_send = _lw_data_channel_sendPtr.asFunction<
      int Function(
          ffi.Pointer<lw_data_channel_t>, ffi.Pointer<ffi.Uint8>, int, int)>();

  /// Closes the channel. The handle stays valid until lw_release.
  void lw_data_channel_close(
    ffi.Pointer<lw_data_channel_t> channel,
  ) {
    return _lw_data_channel_close(
      channel,
    );
  }

  late final _lw_data_channel_closePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<lw_data_channel_t>)>>(
      'lw_data_channel_close');
  late final _lw_data_channel_close = _lw_data_channel_closePtr
      .asFunction<void Function(ffi.Pointer<lw_data_channel_t>)>();

  /// The channel's id, or negative before one is assigned or on error.
  int lw_data_channel_id(
    ffi.Pointer<lw_data_channel_t> channel,
  ) {
    return _lw_data_channel_id(
      channel,
    );
  }

  late final _lw_data_channel_idPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<lw_data_channel_t>)>>(
      'lw_data_channel_id');
  late final _lw_data_channel_id = _lw_data_channel_idPtr
      .asFunction<int Function(ffi.Pointer<lw_data_channel_t>)>();

  /// The channel's state as lw_data_channel_state, negative on error.
  int lw_data_channel_get_state(
    ffi.Pointer<lw_data_channel_t> channel,
  ) {
    return _lw_data_channel_get_state(
      channel,
    );
  }

  late final _lw_data_channel_get_statePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<lw_data_channel_t>)>>(
      'lw_data_channel_get_state');
  late final _lw_data_channel_get_state = _lw_data_channel_get_statePtr
      .asFunction<int Function(ffi.Pointer<lw_data_channel_t>)>();

  /// Bytes accepted for sending but not yet handed to the transport.
  int lw_data_channel_buffered_amount(
    ffi.Pointer<lw_data_channel_t> channel,
  ) {
    return _lw_data_channel_buffered_amount(
      channel,
    );
  }

  late final _lw_data_channel_buffered_amountPtr = _lookup<
          ffi
          .NativeFunction<ffi.Uint64 Function(ffi.Pointer<lw_data_channel_t>)>>(
      'lw_data_channel_buffered_amount');
  late final _lw_data_channel_buffered_amount =
      _lw_data_channel_buffered_amountPtr
          .asFunction<int Function(ffi.Pointer<lw_data_channel_t>)>();

  /// The channel's label, owned by the caller (lw_string_free). NULL on error.
  ffi.Pointer<ffi.Char> lw_data_channel_label(
    ffi.Pointer<lw_data_channel_t> channel,
  ) {
    return _lw_data_channel_label(
      channel,
    );
  }

  late final _lw_data_channel_labelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<lw_data_channel_t>)>>('lw_data_channel_label');
  late final _lw_data_channel_label = _lw_data_channel_labelPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<lw_data_channel_t>)>();

  /// Registers `observer` for `channel`, replacing any previous one. Returns 0 on
  /// success, negative on error. Remove it before releasing the channel.
  int lw_data_channel_set_observer(
    ffi.Pointer<lw_data_channel_t> channel,
    ffi.Pointer<LwDataChannelObserver> observer,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _lw_data_channel_set_observer(
      channel,
      observer,
      user,
    );
  }

  late final _lw_data_channel_set_observerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<lw_data_channel_t>,
              ffi.Pointer<LwDataChannelObserver>,
              ffi.Pointer<ffi.Void>)>>('lw_data_channel_set_observer');
  late final _lw_data_channel_set_observer =
      _lw_data_channel_set_observerPtr.asFunction<
          int Function(ffi.Pointer<lw_data_channel_t>,
              ffi.Pointer<LwDataChannelObserver>, ffi.Pointer<ffi.Void>)>();

  /// Removes and destroys the channel's observer, if any.
  void lw_data_channel_remove_observer(
    ffi.Pointer<lw_data_channel_t> channel,
  ) {
    return _lw_data_channel_remove_observer(
      channel,
    );
  }

  late final _lw_data_channel_remove_observerPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<lw_data_channel_t>)>>(
      'lw_data_channel_remove_observer');
  late final _lw_data_channel_remove_observer =
      _lw_data_channel_remove_observerPtr
          .asFunction<void Function(ffi.Pointer<lw_data_channel_t>)>();

  /// Registers `observer` for `pc`, replacing any previous one. Returns 0 on
  /// success, negative on error. Remove it (or before releasing the pc) with
  /// lw_pc_remove_observer.
  int lw_pc_set_observer(
    ffi.Pointer<lw_pc_t> pc,
    ffi.Pointer<LwPcObserver> observer,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _lw_pc_set_observer(
      pc,
      observer,
      user,
    );
  }

  late final _lw_pc_set_observerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<lw_pc_t>, ffi.Pointer<LwPcObserver>,
              ffi.Pointer<ffi.Void>)>>('lw_pc_set_observer');
  late final _lw_pc_set_observer = _lw_pc_set_observerPtr.asFunction<
      int Function(ffi.Pointer<lw_pc_t>, ffi.Pointer<LwPcObserver>,
          ffi.Pointer<ffi.Void>)>();

  /// Removes and destroys the pc's observer, if any.
  void lw_pc_remove_observer(
    ffi.Pointer<lw_pc_t> pc,
  ) {
    return _lw_pc_remove_observer(
      pc,
    );
  }

  late final _lw_pc_remove_observerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<lw_pc_t>)>>(
          'lw_pc_remove_observer');
  late final _lw_pc_remove_observer = _lw_pc_remove_observerPtr
      .asFunction<void Function(ffi.Pointer<lw_pc_t>)>();
}

/// One plane of a dmabuf-backed frame.
///
/// fd is NON-OWNING: owned by the producer (the decoder CAPTURE-queue pool).
/// It is valid only until the matching LwFrameRelease is invoked, and only
/// within a single pool_generation (the kernel reuses fd numbers after a
/// pool is torn down). Consumers MUST NOT close fd.
final class LwDmabufPlane extends ffi.Struct {
  /// non-owning; valid until release_cb
  @ffi.Int32()
  external int fd;

  /// byte offset of this plane within the dmabuf
  @ffi.Uint32()
  external int offset;

  /// row stride in bytes
  @ffi.Uint32()
  external int pitch;
}

/// A decoded frame, described by reference (zero copy).
///
/// `size` is sizeof(LwDmabufDescriptor) at the producer's compile time. A
/// consumer built against a different ABI minor MUST check `desc->size`
/// before reading any field beyond it: read min(sizeof(local), desc->size)
/// bytes, treat the remainder as absent. New fields only ever append.
///
/// `num_planes` is attacker/bug-reachable via the bitstream path upstream;
/// consumers MUST validate `num_planes <= LW_MAX_PLANES` before indexing
/// planes[] rather than trusting it.
final class LwDmabufDescriptor extends ffi.Struct {
  /// sizeof(LwDmabufDescriptor)
  @ffi.Uint32()
  external int size;

  /// DRM_FORMAT_*
  @ffi.Uint32()
  external int fourcc;

  /// DRM_FORMAT_MOD_* (AFBC/UBWC/linear)
  @ffi.Uint64()
  external int modifier;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  /// 1..LW_MAX_PLANES; validate before indexing
  @ffi.Uint32()
  external int num_planes;

  @ffi.Array.multi([4])
  external ffi.Array<LwDmabufPlane> planes;

  /// -1 none; non-owning. Normally -1: DQBUF
  /// implies decode complete. Reserved for
  /// future GPU-producer paths.
  @ffi.Int32()
  external int acquire_fence_fd;

  /// 0/90/180/270; RTP CVO passthrough
  @ffi.Uint32()
  external int rotation;

  /// for A/V sync + latency HUD
  @ffi.Int64()
  external int rtp_timestamp_us;

  /// monotonic within a session
  @ffi.Uint64()
  external int frame_seq;

  /// increments on pool reallocation; fd numbers
  /// are unique/stable only WITHIN a generation
  /// (kernel reuses fd values after pool close).
  /// Consumers key import caches on this.
  @ffi.Uint32()
  external int pool_generation;

  /// buffers in the producer's pool, or 0 if the
  /// producer does not know. A consumer that holds
  /// frames MUST bound what it holds against this:
  /// hold too many and the producer starves waiting
  /// for a buffer to decode into. Pools differ by an
  /// order of magnitude -- a VAAPI surface pool runs
  /// to dozens, a V4L2 CAPTURE pool is often reorder
  /// depth plus pipeline plus one, so eight to ten --
  /// which is why a consumer cannot pick a fixed
  /// depth that suits both. Treat 0 as small.
  @ffi.Uint32()
  external int pool_size;
}

/// The sink callback table. Registered with the sink registry and bound to a
/// track by token.
///
/// `size` is sizeof(LwVideoSinkV1): forward-compat gate for appended fields.
/// When the function shape must change, introduce LwVideoSinkV2.
final class LwVideoSinkV1 extends ffi.Struct {
  /// sizeof(LwVideoSinkV1)
  @ffi.Uint32()
  external int size;

  /// Called on the DECODER DELIVERY THREAD. MUST be non-blocking and
  /// allocation-free (do an SPSC POD handoff of desc + release pair).
  ///
  /// Consumer either:
  /// - TAKES the frame: stores `desc` BY VALUE, stores
  /// `release`+`release_ctx`, returns NONZERO. It now owns exactly one release
  /// obligation and MUST call `release(release_ctx)` exactly once.
  /// - DECLINES: returns 0. The producer releases the frame immediately
  /// (latest-wins drop). Declining is THE drop mechanism — it keeps the
  /// decoder unblocked; decode never stalls on presentation.
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<LwDmabufDescriptor> desc,
              LwFrameRelease release,
              ffi.Pointer<ffi.Void> release_ctx,
              ffi.Pointer<ffi.Void> user)>> on_frame;

  /// Announces the format/geometry of the generation that is about to begin.
  /// ALWAYS precedes the first on_frame of a new pool_generation.
  /// NORMATIVE: on this call the consumer MUST invalidate all cached imports
  /// from prior generations — fd numbers may be reused by the kernel across
  /// pool reallocation and are NOT identity. `fmt_only` carries a valid
  /// descriptor with no live fds to import.
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LwDmabufDescriptor> fmt_only,
              ffi.Pointer<ffi.Void> user)>> on_format;

  /// End of stream. No further on_frame for this binding.
  external ffi.Pointer<
      ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void> user)>> on_eos;
}

/// Invoked by the consumer exactly once when it is done with a taken frame
/// (scanout out-fence signaled / wl_buffer.release). Maps to producer
/// re-QBUF. release_ctx is the cookie the producer handed to on_frame.
typedef LwFrameRelease
    = ffi.Pointer<ffi.NativeFunction<LwFrameReleaseFunction>>;
typedef LwFrameReleaseFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> release_ctx);
typedef DartLwFrameReleaseFunction = void Function(
    ffi.Pointer<ffi.Void> release_ctx);

final class lw_factory extends ffi.Opaque {}
